--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".StartGame"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".AboutActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".SettingsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
